--- a/Archinime CMS - Creador.html
+++ b/Archinime CMS - Creador.html
@@ -35,7 +35,7 @@
             border: 2px solid #00f0ff; margin: 0 auto 20px; display: block; background: #000;
         }
 
-        /* ESTILOS NUEVOS PARA LA VALORACIÓN DIVIDIDA */
+        /* ESTILOS PARA LA VALORACIÓN DIVIDIDA */
         .rating-container {
             display: flex; align-items: flex-end; gap: 10px;
         }
