--- a/index.html
+++ b/index.html
@@ -144,11 +144,13 @@
   </div>
 
   <script src="index-data.js"></script>
+<script src="notification-system.js"></script>
 
   <script src="animaciones.js"></script>
   <script src="musica_fondo.js"></script>
 
   <script src="script-index.js"></script>
+
 
 </body>
 </html>
