--- a/index.html
+++ b/index.html
@@ -37,8 +37,7 @@
         </button>
         <div id="notifMenu" class="notif-dropdown">
             <div class="notif-header">
-                <span>Actividad Reciente</span>
-                <button class="clear-all-btn" onclick="clearAllNotifications()">Limpiar todo</button>
+                <span style="width: 100%; text-align: center;">Notificaciones</span>
             </div>
             <div id="notifList" class="notif-list">
                 <div class="empty-notif">Sin novedades por ahora.</div>
