--- a/video-player.html
+++ b/video-player.html
@@ -382,8 +382,8 @@
         loadVideo(initialLink);
 
         // Generar botones de servidores
-        if(epData.link) createOptionBtn("Opción 1", epData.link, true);
-        if(epData.link2) createOptionBtn("Opción 2", epData.link2, false);
+        if(epData.link) createOptionBtn("Latino", epData.link, true);
+        if(epData.link2) createOptionBtn("Subtitulado", epData.link2, false);
 
         // Actualizar botón de descarga inicial
         updateDownloadButton(initialLink);
