--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <video id="bg-video" poster="galaxia-morado1.avif" autoplay muted loop playsinline preload="metadata">
     <source src="galaxia.mp4" type="video/mp4">
     Tu navegador no soporta vídeo.
-</video>
+  </video>
   <div id="overlay" aria-hidden="true"></div>
 
   <audio id="bg-music" autoplay></audio>
@@ -36,7 +36,7 @@
 
     <div class="header-actions">
   
-        <button id="installBtn" class="nav-icon-btn install-pulse" style="display:none;" title="Instalar App">
+        <button id="installBtn" class="nav-icon-btn install-pulse" title="Instalar App">
             <i class="fas fa-download"></i>
         </button>
 
@@ -51,7 +51,7 @@
                     <span style="width: 100%; text-align: center;">Notificaciones</span>
                 </div>
                 <div id="notifList" class="notif-list">
-                    <div class="empty-notif">Sin novedades por ahora.</div>
+                     <div class="empty-notif">Sin novedades por ahora.</div>
                 </div>
             </div>
         </div>
