--- a/index.html
+++ b/index.html
@@ -166,22 +166,22 @@
     </svg>
   </div>
 
-  <div id="universalInstallModal" class="ios-modal">
-      <div class="ios-content">
-          <span class="ios-close" onclick="closeInstallModal()">&times;</span>
-          <div id="modalTextIos" style="display:none;">
-              <p>Para instalar en <strong>iPhone/iPad</strong>:</p>
-              <p>1. Pulsa <strong>Compartir</strong> <i class="fas fa-share-square"></i></p>
-              <p>2. Elige <strong>"Agregar a Inicio"</strong> <i class="far fa-plus-square"></i></p>
-          </div>
-          <div id="modalTextPc" style="display:none;">
-              <p style="margin-bottom:10px; font-size:1.1em;"><strong>Instalar Aplicación</strong></p>
-              <p>Si la ventana automática no aparece, búscala en tu navegador:</p>
-              <p>1. Mira en la barra de direcciones (icono <i class="fas fa-desktop"></i> o <i class="fas fa-plus-circle"></i>).</p>
-              <p>2. O ve al menú (3 puntos) &rarr; <strong>"Instalar Archinime"</strong>.</p>
-          </div>
-      </div>
-  </div>
+<div id="universalInstallModal" class="ios-modal" style="display:none; position:fixed; z-index:9999; left:0; top:0; width:100%; height:100%; background:rgba(0,0,0,0.8);">
+    <div class="ios-content" style="background:#1a1a1a; margin:15% auto; padding:20px; border:1px solid #8c52ff; width:80%; max-width:400px; text-align:center; border-radius:15px;">
+        <span class="ios-close" onclick="closeInstallModal()" style="float:right; cursor:pointer; font-size:24px;">&times;</span>
+        
+        <div id="modalTextPc">
+            <h2 style="color:#8c52ff; margin-bottom:15px;">Instalar en PC</h2>
+            <p>Para instalar Archinime en tu escritorio:</p>
+            <div style="background:#333; padding:10px; margin:15px 0; border-radius:10px;">
+                <p>1. Mira la <strong>barra de direcciones</strong> arriba.</p>
+                <p>2. Haz clic en el icono de <strong>Instalar</strong> <i class="fas fa-desktop"></i> o <i class="fas fa-plus-circle"></i>.</p>
+                <p>3. Selecciona "Instalar".</p>
+            </div>
+            <p style="font-size:0.8rem; opacity:0.7;">Si no ves el icono, pulsa los 3 puntos del navegador y elige "Instalar Archinime".</p>
+        </div>
+    </div>
+</div>
 
   <script src="index-data.js"></script>
   <script src="animaciones.js"></script>
