--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <video id="bg-video" poster="galaxia-morado1.avif" autoplay muted loop playsinline preload="metadata">
     <source src="galaxia.mp4" type="video/mp4">
     Tu navegador no soporta vídeo.
-  </video>
+</video>
   <div id="overlay" aria-hidden="true"></div>
 
   <audio id="bg-music" autoplay></audio>
@@ -36,7 +36,7 @@
 
     <div class="header-actions">
   
-        <button id="installBtn" class="nav-icon-btn install-pulse" title="Descargar App">
+        <button id="installBtn" class="nav-icon-btn install-pulse" style="display:none;" title="Instalar App">
             <i class="fas fa-download"></i>
         </button>
 
@@ -51,7 +51,7 @@
                     <span style="width: 100%; text-align: center;">Notificaciones</span>
                 </div>
                 <div id="notifList" class="notif-list">
-                     <div class="empty-notif">Sin novedades por ahora.</div>
+                    <div class="empty-notif">Sin novedades por ahora.</div>
                 </div>
             </div>
         </div>
@@ -166,22 +166,14 @@
     </svg>
   </div>
 
-<div id="universalInstallModal" class="ios-modal" style="display:none; position:fixed; z-index:9999; left:0; top:0; width:100%; height:100%; background:rgba(0,0,0,0.8);">
-    <div class="ios-content" style="background:#1a1a1a; margin:15% auto; padding:20px; border:1px solid #8c52ff; width:80%; max-width:400px; text-align:center; border-radius:15px;">
-        <span class="ios-close" onclick="closeInstallModal()" style="float:right; cursor:pointer; font-size:24px;">&times;</span>
-        
-        <div id="modalTextPc">
-            <h2 style="color:#8c52ff; margin-bottom:15px;">Instalar en PC</h2>
-            <p>Para instalar Archinime en tu escritorio:</p>
-            <div style="background:#333; padding:10px; margin:15px 0; border-radius:10px;">
-                <p>1. Mira la <strong>barra de direcciones</strong> arriba.</p>
-                <p>2. Haz clic en el icono de <strong>Instalar</strong> <i class="fas fa-desktop"></i> o <i class="fas fa-plus-circle"></i>.</p>
-                <p>3. Selecciona "Instalar".</p>
-            </div>
-            <p style="font-size:0.8rem; opacity:0.7;">Si no ves el icono, pulsa los 3 puntos del navegador y elige "Instalar Archinime".</p>
-        </div>
-    </div>
-</div>
+  <div id="iosInstallModal" class="ios-modal">
+      <div class="ios-content">
+          <span class="ios-close" onclick="closeIosModal()">&times;</span>
+          <p>Para instalar <strong>Archinime</strong> en tu iPhone/iPad:</p>
+          <p>1. Pulsa el botón <strong>Compartir</strong> <i class="fas fa-share-square"></i></p>
+          <p>2. Selecciona <strong>"Agregar a Inicio"</strong> <i class="far fa-plus-square"></i></p>
+      </div>
+  </div>
 
   <script src="index-data.js"></script>
   <script src="animaciones.js"></script>
@@ -190,12 +182,12 @@
   <script src="script-index.js"></script>
   <script src="pwa-handler.js"></script> 
   <script>
-      // Registro del Service Worker mejorado
+      // Registrar Service Worker
       if ('serviceWorker' in navigator) {
           window.addEventListener('load', () => {
               navigator.serviceWorker.register('sw.js')
-                  .then(reg => console.log('SW listo:', reg.scope))
-                  .catch(err => console.log('SW error:', err));
+                  .then(registration => console.log('SW registrado: ', registration.scope))
+                  .catch(err => console.log('SW fallo: ', err));
           });
       }
   </script>
