--- a/video-player.html
+++ b/video-player.html
@@ -383,7 +383,7 @@
 
         // Generar botones de servidores
         if(epData.link) createOptionBtn("Latino", epData.link, true);
-        if(epData.link2) createOptionBtn("Opcion 2", epData.link2, false);
+        if(epData.link2) createOptionBtn("Subtitulado", epData.link2, false);
 
         // Actualizar botón de descarga inicial
         updateDownloadButton(initialLink);
