--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!doctype html>
 <html lang="es">
 <head>
-  <meta charset="utf-8" />
+<meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Archinime</title>
+  
+  <meta name="monetag" content="490404697b7d9182bf44c34f9a0fa115">
   
   <link rel="icon" href="Logo_Archinime.avif" type="image/png">
   <link rel="manifest" href="manifest.json">
