--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
         <option>Superhéroes</option>
         <option>Survival</option>
         <option>Survival Game</option>
+        <option>Suspenso</option>
         <option>Tentáculos</option>
         <option>Terror</option>
         <option>Terror psicológico</option>
