--- a/video-player.html
+++ b/video-player.html
@@ -339,7 +339,6 @@
     </div>
 
     <div class="player-wrapper" id="playerContainer">
-   
       </div>
 
     <div class="options" id="serverOptions"></div>
@@ -356,7 +355,6 @@
 
     <div class="ad-container">
         <script type="text/javascript">
-  
          atOptions = {
             'key' : '1f072201cddab551b2b65315f6c1643e',
             'format' : 'iframe',
@@ -367,6 +365,20 @@
         </script>
         <script type="text/javascript" src="https://www.highperformanceformat.com/1f072201cddab551b2b65315f6c1643e/invoke.js"></script>
     </div>
+
+    <div class="ad-container">
+        <script type="text/javascript">
+          atOptions = {
+            'key' : '1904483365c7a7ab9f83e49d32b7d237',
+            'format' : 'iframe',
+            'height' : 60,
+            'width' : 468,
+            'params' : {}
+          };
+        </script>
+        <script type="text/javascript" src="https://www.highperformanceformat.com/1904483365c7a7ab9f83e49d32b7d237/invoke.js"></script>
+    </div>
+
     <div class="comments-section">
         <div class="comments-box">
             <div class="comments-header">
@@ -374,7 +386,6 @@
                 <h3>Comentarios</h3>
             </div>
             
-  
            <div id="disqus_thread"></div>
             
             <script>
