--- a/index.html
+++ b/index.html
@@ -624,7 +624,7 @@
 
   <div class="controls-container controls" id="controls">
     <select id="genre-select" onchange="filtro()" aria-label="Seleccionar género">
-        <option value="">📂 TODOS LOS DATOS</option>
+        <option value="">Todos los géneros</option>
         <option>Acción</option>
         <option>Animación</option>
         <option>Aventura</option>
@@ -685,17 +685,17 @@
         <option>Tragedia</option>
         <option>Yaoi</option>
         <option>Yuri</option>
-    </select>
+      </select>
 
-    <select id="demographic-select" onchange="filtro()" aria-label="Seleccionar demografía">
-      <option value="">👥 DEMOGRAFÍA</option>
-      <option>Josei</option>
-      <option>Kodomo</option>
-      <option>Seijin</option>
-      <option>Seinen</option>
-      <option>Shōjo</option>
-      <option>Shōnen</option>
-    </select>
+      <select id="demographic-select" onchange="filtro()" aria-label="Seleccionar demografía">
+        <option value="">Todas las demografías</option>
+        <option>Josei</option>
+        <option>Kodomo</option>
+        <option>Seijin</option>
+        <option>Seinen</option>
+        <option>Shōjo</option>
+        <option>Shōnen</option>
+      </select>
 
     <select id="rating-select" onchange="filtro()" aria-label="Seleccionar valoración">
       <option value="">⭐ RANKING GLOBAL</option>
