--- a/index.html
+++ b/index.html
@@ -3,9 +3,19 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Archinime OS | Next Gen Platform</title>
   
-  <link rel="icon" href="Logo_Archinime.avif" type="image/png">
+  <title>Archinime</title>
+  
+  <meta name="description" content="Entra en Archinime: Tu plataforma estilo Cyberpunk para ver anime online.">
+  
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Archinime">
+  <meta property="og:description" content="La nueva forma de ver anime. Interfaz inmersiva y catálogo actualizado.">
+  <meta property="og:image" content="https://archinime.github.io/-Archinime-/Logo_Archinime.png">
+  
+  <link rel="icon" href="Logo_Archinime.png" type="image/png">
+  <link rel="apple-touch-icon" href="Logo_Archinime.png">
+  
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#8c52ff">
 
