--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
   
   <title>Archinime</title>
   
-  <meta name="description" content="Entra en Archinime: Tu plataforma estilo Cyberpunk para ver anime online.">
+  <meta name="description" content="Explora Archinime, la plataforma definitiva para ver anime online. Disfruta de estrenos de temporada, clásicos y una base de datos actualizada en alta calidad.">
   
   <meta property="og:type" content="website">
   <meta property="og:title" content="Archinime">
-  <meta property="og:description" content="La nueva forma de ver anime. Interfaz inmersiva y catálogo actualizado.">
+  <meta property="og:description" content="Únete a la nueva era del streaming de anime con interfaz Cyberpunk. ¡Entra ya!">
   <meta property="og:image" content="https://archinime.github.io/-Archinime-/Logo_Archinime.png">
   
   <link rel="icon" href="Logo_Archinime.png" type="image/png">
