--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
   <meta property="og:description" content="Únete a la nueva era del streaming de anime con interfaz Cyberpunk. ¡Entra ya!">
   <meta property="og:image" content="https://archinime.github.io/-Archinime-/Logo_Archinime.png">
   
-  <link rel="icon" href="Logo_Archinime.png" type="image/png">
-  <link rel="apple-touch-icon" href="Logo_Archinime.png">
+<link rel="canonical" href="https://archinime.github.io/-Archinime-/" />
+
+<link rel="icon" href="https://archinime.github.io/-Archinime-/Logo_Archinime.png" type="image/png">
+<link rel="apple-touch-icon" href="https://archinime.github.io/-Archinime-/Logo_Archinime.png">
+<link rel="shortcut icon" href="https://archinime.github.io/-Archinime-/Logo_Archinime.png">
   
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#8c52ff">
