--- a/index.html
+++ b/index.html
@@ -13,16 +13,12 @@
   <meta property="og:description" content="Únete a la nueva era del streaming de anime con interfaz Cyberpunk. ¡Entra ya!">
   <meta property="og:image" content="https://archinime.github.io/-Archinime-/Logo_Archinime.png">
   
-<link rel="canonical" href="https://archinime.github.io/-Archinime-/" />
-
-<link rel="icon" href="https://archinime.github.io/-Archinime-/Logo_Archinime.png" type="image/png">
-<link rel="apple-touch-icon" href="https://archinime.github.io/-Archinime-/Logo_Archinime.png">
-<link rel="shortcut icon" href="https://archinime.github.io/-Archinime-/Logo_Archinime.png">
+  <link rel="icon" href="Logo_Archinime.png" type="image/png">
+  <link rel="apple-touch-icon" href="Logo_Archinime.png">
   
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#8c52ff">
 
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3917033517052949" crossorigin="anonymous"></script>
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -734,6 +730,8 @@
     var version = new Date().getTime();
     document.write('<script src="index-data.js?v=' + version + '"><\/script>');
   </script>
+
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3917033517052949" crossorigin="anonymous"></script>
 
   <script src="animaciones.js"></script>
   <script src="musica_fondo.js"></script>
