--- a/index.html
+++ b/index.html
@@ -13,8 +13,17 @@
   <meta property="og:description" content="Únete a la nueva era del streaming de anime con interfaz Cyberpunk. ¡Entra ya!">
   <meta property="og:image" content="https://archinime.github.io/-Archinime-/Logo_Archinime.png">
   
-  <link rel="icon" href="Logo_Archinime.png" type="image/png">
-  <link rel="apple-touch-icon" href="Logo_Archinime.png">
+  <link rel="icon" type="image/png" 
+href="https://raw.githubusercontent.com/Archinime/-Archinime-/main/favicon%202.png" sizes="32x32">
+
+  <link rel="icon" type="image/png" 
+href="https://raw.githubusercontent.com/Archinime/-Archinime-/main/favicon%201.png" sizes="16x16">
+
+  <link rel="apple-touch-icon" 
+href="https://raw.githubusercontent.com/Archinime/-Archinime-/main/favicon%203.png">
+
+  <link rel="shortcut icon" 
+href="https://raw.githubusercontent.com/Archinime/-Archinime-/main/favicon%203.png">
   
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#8c52ff">
