--- a/index.html
+++ b/index.html
@@ -698,6 +698,7 @@ border-radius:50%; opacity:0.8;">
         <option value="">Todos los géneros</option>
         <option>Acción</option>
         <option>Animación</option>
+        <option>Artes Marciales</option>
         <option>Aventura</option>
         <option>Ciencia ficción</option>
         <option>Cocina</option>
@@ -759,6 +760,7 @@ border-radius:50%; opacity:0.8;">
   
         <option>Tokusatsu</option>
         <option>Tragedia</option>
+        <option>VRMMO</option>
         <option>Yaoi</option>
         <option>Yuri</option>
       </select>
